Added essential backend files and pictures

--- a/index.html
+++ b/index.html
@@ -3,22 +3,54 @@
 <head>
   <title>Brian Polhamus' Portfolio</title>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="container">
     <div class="nav">
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="about_me.html">About Me</a></li>
-        <li><a href="experience.html">Development Experience</a></li>
+        <li><a href="#about_me">About</a></li>
+        <li><a href="#experience">Development Experience</a></li>
         <li><a href="contact.html">Contact Me</a></li>
         <li><a href="updates.html">Updates</a></li>
       </ul>
     </div>
     <div class="body">
-      <h2>Brian</h2>
+      <div id="about_me" class="container-fluid">
+        <h1>Brian Polhamus</h1>
+        <p>Developer with a focus in design and business application development. Devoted to functional programming and creative solutions.</p>
+        <h2>Education</h2>
+        <p><b>University of Cincinnati</b></p>
+        <p><b>Major:</b> Information Systems</p>
+        <p><b>Minor:</b> Information Technology</p>
+        <br>
+        <a href="about_me.html">Learn more about me.</a>
+      </div>
+      <br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br>
+      <div id="experience" class="container-fluid">
+        <h1>Experience</h1>
+        <h2>Company's I have worked for:</h2>
+        <div class="row">
+          <img src="resources\Great-American-Insurance-Grp-Logo-LG2.jpg" alt="Great American Insurance" class="work_logos">
+          <p><b>Great American Insurance</b> -Development Intern</p>
+          <img src="resources\PrintLogo.png" alt="JH Specialty" class="work_logos">
+          <p><b>JH Specialty</b> -SEO Intern</p>
+        </div>
+      </div>
     </div>
   </div>
 </body>
