Small Structure Changes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="#about_me">About</a></li>
         <li><a href="#experience">Development Experience</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
-        <li><a href="updates.html">Updates</a></li>
+        <li><a href="#contact">Contact Me</a></li>
       </ul>
     </div>
     <div class="body">
@@ -31,7 +30,7 @@
         <br>
         <a href="about_me.html">Learn more about me.</a>
       </div>
-      <div id="experience" class="container-fluid">
+      <div id="experience" class="container-fluid experience">
         <h1>Experience</h1>
         <h2>Company's I have worked for:</h2>
         <div class="row">
@@ -40,6 +39,10 @@
           <img src="resources\PrintLogo.png" alt="JH Specialty" class="work_logos">
           <p><b>JH Specialty</b> -SEO Intern</p>
         </div>
+      </div>
+      <div class="contact">
+        <h1>Contact Me</h1>
+
       </div>
     </div>
   </div>
