Created Cool Temporary landing page
Multiple backgrounds created for options.

--- a/index.html
+++ b/index.html
@@ -1,50 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Brian Polhamus' Portfolio</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-</head>
+<title>Portfolio Coming Soon</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="main.css">
+<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
 <body>
-  <div class="container">
-    <div class="nav">
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="#about_me">About</a></li>
-        <li><a href="#experience">Development Experience</a></li>
-        <li><a href="#contact">Contact Me</a></li>
-      </ul>
-    </div>
-    <div class="body">
-      <div id="about_me" class="container-fluid">
-        <h1>Brian Polhamus</h1>
-        <p>Developer with a focus in design and business application development. Devoted to functional programming and creative solutions.</p>
-        <h2>Education</h2>
-        <p><b>University of Cincinnati</b></p>
-        <p><b>Major:</b> Information Systems</p>
-        <p><b>Minor:</b> Information Technology</p>
-        <br>
-        <a href="about_me.html">Learn more about me.</a>
-      </div>
-      <div id="experience" class="container-fluid experience">
-        <h1>Experience</h1>
-        <h2>Company's I have worked for:</h2>
-        <div class="row">
-          <img src="resources\Great-American-Insurance-Grp-Logo-LG2.jpg" alt="Great American Insurance" class="work_logos">
-          <p><b>Great American Insurance</b> -Development Intern</p>
-          <img src="resources\PrintLogo.png" alt="JH Specialty" class="work_logos">
-          <p><b>JH Specialty</b> -SEO Intern</p>
-        </div>
-      </div>
-      <div class="contact">
-        <h1>Contact Me</h1>
-
-      </div>
-    </div>
+<div class="bgimg display-container animate-opacity text-white">
+  <div class="display-middle">
+    <h1 class="jumbo animate-top">PORTFOLIO COMING SOON</h1>
+    <p class="large center" style="background-color: rgba(0, 0, 0, 0.81)">~2 Weeks left</p>
   </div>
+  <div class="display-bottomleft padding-large">
+    <p>Inspired by: W3Schools</p>
+  </div>
+</div>
 </body>
 </html>
