--- a/index2.html
+++ b/index2.html
@@ -5,50 +5,30 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main2.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="container">
-    <div class="nav">
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="#about_me">About</a></li>
-        <li><a href="#experience">Development Experience</a></li>
-        <li><a href="#contact">Contact Me</a></li>
-      </ul>
+  <!-- Nav bar -->
+  <div class="top">
+    <div class="bar" id="navBar">
+      <a href="javascript:void(0)" class="bar-item button hover-black hide-medium hide-large opennav right" onclick="toggleFunction()" title="Toggle Navigation Menu">
+        <i class="fa fa-bars"></i>
+      </a>
+      <a href="#home" class="bar-item button">HOME</a>
+      <a href="#about" class="bar-item button hide-small">ABOUT ME</a>
+      <a href="#work" class="bar-item button hide-small">WORK EXPERIENCE</a>
+      <a href="#contact" class="bar-item button hide-small">CONTACT</a>
     </div>
-    <div class="body">
-      <div id="about_me" class="container-fluid">
-        <h1>Brian Polhamus</h1>
-        <p>Developer with a focus in design and business application development. Devoted to functional programming and creative solutions.</p>
-        <h2>Education</h2>
-        <p><b>University of Cincinnati</b></p>
-        <p><b>Major:</b> Information Systems</p>
-        <p><b>Minor:</b> Information Technology</p>
-        <br>
-        <a href="about_me.html">Learn more about me.</a>
-      </div>
-      <div id="experience" class="container-fluid experience">
-        <h1>Experience</h1>
-        <h2>Company's I have worked for:</h2>
-        <div class="row col-md-6">
-            <img src="resources\Great-American-Insurance-Grp-Logo-LG2.jpg" alt="Great American Insurance" class="work_logos">
-            <p><b>Great American Insurance</b> -Development Intern</p>
-          </div>
-          <div class="row col-md-6">
-          <img src="resources\PrintLogo.png" alt="JH Specialty" class="work_logos">
-          <p><b>JH Specialty</b> -SEO Intern</p>
-        </div>
-      </div>
-    </div>
-    <div class="contact">
-      <h1>Contact Me</h1>
 
+    <!-- Nav bar on smaller screens -->
+    <div id="navSmall" class="navblock white hide hide-large hide-medium">
+      <a href="#about" onclick="toggleFunction()">ABOUT</a>
+      <a href="#work" class="bar-item button hide-small">WORK EXPERIENCE</a>
+      <a href="#contact" class="bar-item button hide-small">CONTACT</a>
     </div>
   </div>
-</div>
 </body>
 </html>
